[metadata]
name = hydrodashboards
author = Daniel Tollenaar
author_email = daniel@d2hydro.nl
version = file: VERSION.txt
description = Dashboards for hydro data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
install_requires =
   aiohttp
   pandas
   geopandas
   requests
   bokeh
   fewspy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test =
    pytest
    coverage
    pytest-flakes
    pytest-black
docs =
    mkdocs

[tool:pytest]
addopts = --black --flakes --ignore=tests/data

[flake8]
max-line-length = 88

[isort]
atomic = true
force_alphabetical_sort = true
force_single_line = true
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
skip = bin,lib
use_parentheses = true
