[metadata]
name = hydrodashboards
author = Daniel Tollenaar
author_email = daniel@d2hydro.nl
version = 0.6.2
description = Dashboards for Hydro Data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
install_requires =
   aiohttp
   nest-asyncio
   pandas
   geopandas<=0.12.2
   requests
   bokeh==2.4.1
   fewspy
scripts = 
   scripts/build_hydrodashboard.py
   scripts/serve_hydrodashboard.py

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
hydrodashboards.bokeh = config.json, theme.yaml
hydrodashboards.bokeh.static.css = *.css
hydrodashboards.bokeh.static.icons = *.png, *.svg
hydrodashboards.bokeh.static.js =  *.js, *.map
hydrodashboards.bokeh.templates =  *.html

[options.extras_require]
test =
    pytest
    coverage
    pytest-flakes
    pytest-black
docs =
    mkdocs

[tool:pytest]
addopts = --black --flakes --ignore=tests/data

[flake8]
max-line-length = 88

[isort]
atomic = true
force_alphabetical_sort = true
force_single_line = true
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
skip = bin,lib
use_parentheses = true
